refactor: used toList in extractOutpointValues make it immutable